--- a/src/views/home.module.css
+++ b/src/views/home.module.css
@@ -67,7 +67,7 @@
 .navlink:hover {
   transform: scale(1.02);
 }
-.button {
+.navlink1 {
   transition: 0.3s;
   font-family: Nunito;
   margin-left: var(--dl-space-space-unit);
@@ -75,8 +75,9 @@
   padding-left: var(--dl-space-space-twounits);
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: var(--dl-space-space-unit);
+  text-decoration: none;
 }
-.button:hover {
+.navlink1:hover {
   transform: scale(1.02);
 }
 .text04 {
@@ -106,9 +107,9 @@
   display: contents;
 }
 .image1 {
-  right: 26px;
+  right: var(--dl-space-space-halfunit);
   width: 50px;
-  bottom: 68px;
+  bottom: var(--dl-space-space-halfunit);
   position: absolute;
   object-fit: cover;
   text-decoration: none;
@@ -191,7 +192,7 @@
   .BtnGroup {
     flex-direction: column;
   }
-  .button {
+  .navlink1 {
     margin-top: var(--dl-space-space-unit);
     margin-left: 0px;
   }
@@ -206,7 +207,7 @@
     padding-right: var(--dl-space-space-unit);
   }
   .image1 {
-    right: 7px;
-    bottom: 35px;
+    right: 0px;
+    bottom: 0px;
   }
 }
