--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card-body {
+  color: black!important;
+}
+
+#accessWalletBtn {
+  color: black!important;
+}
